force-app/main/default/objects/CountryList__c/CountryList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Référentiel des pays</label>
</CustomObject>