force-app/main/default/objects/CountryList__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>Devise</label>
    <length>5</length>
    <type>Text</type>
</CustomField>