force-app/main/default/objects/CountryList__c/fields/ISOCode__c.field-meta.xml
<CustomField>
    <fullName>ISOCode__c</fullName>
    <label>Code ISO</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>