force-app/main/default/objects/CountryList__c/fields/ISOCodeA2__c.field-meta.xml
<CustomField>
    <fullName>ISOCodeA2__c</fullName>
    <label>Code ISO A2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>