force-app/main/default/objects/CountryList__c/fields/ISOCodeA3__c.field-meta.xml
<CustomField>
    <fullName>ISOCodeA3__c</fullName>
    <label>Code ISO A3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>